// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LessonTitleCard Component should display "challenges" button on wider screens 1`] = `
<div>
  <div
    class="card shadow-sm mt-3 col-12 px-0 pt-3 border-0"
  >
    <div
      class="card-body p-0"
    >
      <div
        class="d-flex mb-3 px-3"
      >
        <img
          alt="lesson-cover"
          class="lessonTitleCard__lesson-cover me-3"
          src="/assets/curriculum/coverUrl"
        />
        <div>
          <p
            class="m-0"
          >
            <a
              class="link link-primary"
              href="#"
            >
              Go Back
            </a>
          </p>
          <h1
            class="lessonTitleCard__lesson-title"
          >
            Test Lesson
          </h1>
        </div>
      </div>
      <div
        class="card-footer d-flex bg-white p-0"
      >
        <a
          class="text-dark d-block border-end rounded-0 px-4 py-3 noUnderline"
          href="lessonUrl"
          rel="noopener noreferrer"
          target="_blank"
        >
          LESSON
        </a>
        <a
          class="text-dark border-end rounded-0 px-4 py-3 noUnderline"
          href="/curriculum/js0"
        >
          CHALLENGES
        </a>
        <a
          class="text-dark d-block border-end rounded-0 px-4 py-3 noUnderline"
          href="/review/js0"
        >
          REVIEW
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`LessonTitleCard Component should display "show challenges" button on small screens and call "setShow" when clicked 1`] = `
<div>
  <div
    class="card shadow-sm mt-3 col-12 px-0 pt-3 border-0"
  >
    <div
      class="card-body p-0"
    >
      <div
        class="d-flex mb-3 px-3"
      >
        <img
          alt="lesson-cover"
          class="lessonTitleCard__lesson-cover me-3"
          src="/assets/curriculum/coverUrl"
        />
        <div>
          <p
            class="m-0"
          >
            <a
              class="link link-primary"
              href="#"
            >
              Go Back
            </a>
          </p>
          <h1
            class="lessonTitleCard__lesson-title"
          >
            Test Lesson
          </h1>
        </div>
      </div>
      <div
        class="card-footer d-flex bg-white p-0"
      >
        <a
          class="text-dark d-block border-end rounded-0 px-4 py-3 noUnderline"
          href="lessonUrl"
          rel="noopener noreferrer"
          target="_blank"
        >
          LESSON
        </a>
        <div
          class="text-dark d-block border-end rounded-0 px-4 py-3"
        >
          SHOW CHALLENGES
        </div>
        <a
          class="text-dark d-block border-end rounded-0 px-4 py-3 noUnderline"
          href="/review/js0"
        >
          REVIEW
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`LessonTitleCard Component should renders default layout 1`] = `
<div>
  <div
    class="card shadow-sm mt-3 col-12 px-0 pt-3 border-0"
  >
    <div
      class="card-body p-0"
    >
      <div
        class="d-flex mb-3 px-3"
      >
        <img
          alt="lesson-cover"
          class="lessonTitleCard__lesson-cover me-3"
          src="/assets/curriculum/coverUrl"
        />
        <div>
          <p
            class="m-0"
          >
            <a
              class="link link-primary"
              href="#"
            >
              Go Back
            </a>
          </p>
          <h1
            class="lessonTitleCard__lesson-title"
          >
            Test Lesson
          </h1>
        </div>
      </div>
      <div
        class="card-footer d-flex bg-white p-0"
      >
        <a
          class="text-dark d-block border-end rounded-0 px-4 py-3 noUnderline"
          href="lessonUrl"
          rel="noopener noreferrer"
          target="_blank"
        >
          LESSON
        </a>
        <a
          class="text-dark border-end rounded-0 px-4 py-3 noUnderline"
          href="/curriculum/js0"
        >
          CHALLENGES
        </a>
        <a
          class="text-dark d-block border-end rounded-0 px-4 py-3 noUnderline"
          href="/review/js0"
        >
          REVIEW
        </a>
      </div>
    </div>
  </div>
</div>
`;
